# ates-assessment-tool

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
src/tool/: launch.py  main_app.py
src/tool/core/: ates_calculator.py  monte_carlo_engine.py  visualization_module.py
src/tool/screens/: screen1_quick_look.py  screen2_probabilistic.py  screen3_distributions.py  screen4_percentiles.py  screen5_sensitivity.py
src/tool/utils/: state_management.py
src/tool/validation/: test_validation.py  validation_framework.py
